--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="time; URL=http://43.132.163.35" />
+<meta http-equiv="refresh" content="0; URL=http://43.132.163.35" />
